--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.jillesvangurp</groupId>
 	<artifactId>httpclient-future</artifactId>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 
 	<name>httpclient-future</name>
 	<description>A wrapper for httpclient that allows using cancelable futures</description>
