add config to deploy to my new repo

--- a/pom.xml
+++ b/pom.xml
@@ -45,16 +45,17 @@
         <developerConnection>scm:git:git://github.com/jillesvangurp/httpclient-future.git</developerConnection>
     </scm>
 
-    <distributionManagement>
-        <repository>
-            <id>repo</id>
-            <url>https://github.com/jillesvangurp/mvnrepo/raw/master/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshot-repo</id>
-            <url>https://github.com/jillesvangurp/mvnrepo/raw/master/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+	<distributionManagement>
+		<repository>
+			<id>release.repo</id>
+			<url>dav:http://repo.jillesvangurp.com/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshot.repo</id>
+			<url>dav:http://repo.jillesvangurp.com/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 
 	<developers>
 		<developer>
@@ -116,8 +117,14 @@
 				</executions>
 			</plugin>
 		</plugins>
-	</build>
-
+        <extensions>
+            <extension>
+            <artifactId>wagon-webdav-jackrabbit</artifactId>
+            <groupId>org.apache.maven.wagon</groupId>
+            <version>2.2</version>
+            </extension>
+        </extensions>
+    </build>
 	<profiles>
 		<profile>
 			<id>signartifacts</id>
